@@ -14,6 +14,8 @@
   Scott Carter).
 - Setting 'bulk' to zero is interpreted as infinity, which means there is no
   amount of changes that is considered dangerous (thanks to Tomas Babej).
+- Disable hooks in bash completion script.  Hooks were previously able to
+  abort processing or output interfering data, breaking completion.
 
 ------ current release ---------------------------
 
